<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/blob_scene_haikei_2"
    android:theme="@style/Theme.LoginActivity"
    tools:context="com.dicoding.picodiploma.aeye.ui.login.LoginActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"

        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/login"
        android:textAlignment="center"
        android:textColor="@color/black"

        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="200dp"
        android:layout_height="200dp"

        android:layout_marginTop="16dp"
        android:src="@drawable/aeye_logo"
        android:contentDescription="@string/logo_a_eye"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/tvUsername"
        android:layout_width="match_parent"

        android:layout_height="wrap_content"
        android:text="@string/username"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="18sp"

        android:layout_marginHorizontal="90dp"
        android:layout_marginVertical="24dp"
        app:layout_constraintTop_toBottomOf="@+id/ivLogo" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="250dp"
        android:layout_height="50dp"

        android:hint="@string/username"
        android:background="@drawable/edt_background"
        android:drawableStart="@drawable/baseline_person_24"
        android:drawablePadding="10dp"
        android:paddingHorizontal="10dp"
        android:inputType="textEmailAddress"

        app:flow_horizontalAlign="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvUsername" />

    <TextView
        android:id="@+id/tvPassword"
        android:layout_width="match_parent"

        android:layout_height="wrap_content"
        android:layout_marginHorizontal="90dp"
        android:layout_marginVertical="24dp"

        android:text="@string/password"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="18sp"

        app:layout_constraintTop_toBottomOf="@+id/etEmail" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="250dp"
        android:layout_height="50dp"

        android:hint="@string/password"
        android:background="@drawable/edt_background"
        android:drawableStart="@drawable/baseline_key_24"
        android:drawablePadding="10dp"
        android:paddingHorizontal="10dp"
        android:inputType="textPassword"

        app:layout_constraintEnd_toEndOf="@+id/etEmail"
        app:layout_constraintStart_toStartOf="@+id/etEmail"
        app:layout_constraintTop_toBottomOf="@+id/tvPassword" />

    <TextView
        android:id="@+id/tvDeniedMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="8dp"
        android:text="@string/email_atau_password_salah"

        android:textColor="@color/dark_red"
        android:textSize="16sp"
        android:visibility="gone"

        app:layout_constraintBottom_toTopOf="@+id/btnLogin"
        app:layout_constraintEnd_toEndOf="@+id/etPassword"
        app:layout_constraintStart_toStartOf="@+id/etPassword"
        app:layout_constraintTop_toBottomOf="@+id/etPassword" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnLogin"
        android:layout_width="250dp"
        android:layout_height="48dp"

        android:layout_marginTop="16dp"

        android:backgroundTint="@color/cyan"
        android:background="@drawable/rounded_corner"

        android:textSize="16sp"
        android:textColor="@color/white"
        android:text="@string/login"

        app:layout_constraintEnd_toEndOf="@+id/etPassword"
        app:layout_constraintStart_toStartOf="@+id/etPassword"
        app:layout_constraintTop_toBottomOf="@+id/tvDeniedMessage" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_centerInParent="true"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin" />

</androidx.constraintlayout.widget.ConstraintLayout>